# sound_player_cpp

./: CMakeLists.txt
include/sound_player_cpp/: player.hpp
src/sound_player_cpp/: player.cpp  sample.cpp
